# bitrix_utils

./: .gitignore  README.md  make_scheduler.bat  make_scheduler.sh  pyproject.toml  remove_scheduler.bat  remove_scheduler.sh  run_task.sh
add_task/: add_task.py  calendar_2024.ods  day_checker.py  logger.py
